--- a/recommender/static/src/register.css
+++ b/recommender/static/src/register.css
@@ -54,7 +54,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 8rem;
+    /* margin-top: 8rem; */
     background-color: #f7f9fc;
 
 }
