--- a/recommender/users/templates/signup.html
+++ b/recommender/users/templates/signup.html
@@ -11,73 +11,73 @@
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     {% endblock js_cdn %}
 
+    <div class="container mx-auto px-4 pt-10">
+        <div class="min-h-screen flex items-center justify-center w-full bg-white" id="auth"
+             style="background-color: white">
+            <div class="bg-white p-8 rounded-lg shadow-md w-full max-w-sm">
 
-    <div class="min-h-screen flex items-center justify-center w-full bg-white" id="auth"
-         style="background-color: white">
-        <div class="bg-white p-8 rounded-lg shadow-md w-full max-w-sm">
-
-            <form method="POST" action="/signup/"
-                  class="max-w-sm mx-auto bg-white p-6 shadow-md rounded-lg border bg-white">
-                {% csrf_token %}
-                <div class="mb-5">
-                    <label for="name" class="block mb-2 text-sm font-medium text-gray-900">Username</label>
-                    <input type="text" name="name" id="name"
-                           class="shadow-sm bg-white border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
-                           required/>
-                </div>
-                <div class="mb-5">
-                    <label for="email" class="block mb-2 text-sm font-medium text-gray-900">Your email</label>
-                    <input type="email" name="email" id="email"
-                           class="shadow-sm bg-white border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
-                           required/>
-                </div>
-                <div class="mb-5">
-                    <label for="password" class="block mb-2 text-sm font-medium text-gray-900">Your password</label>
-                    <input type="password" name="password" id="password"
-                           class="shadow-sm bg-white border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
-                           required/>
-                </div>
-                <div class="mb-5">
-                    <label for="repeat-password" class="block mb-2 text-sm font-medium text-gray-900">Repeat
-                        password</label>
-                    <input type="password" id="repeat-password"
-                           class="shadow-sm bg-white border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
-                           required/>
-                </div>
-                <div class="flex items-start mb-5">
-                    <div class="flex items-center h-5">
-                        <input id="terms" type="checkbox" value=""
-                               class="w-4 h-4 border border-gray-300 rounded-sm bg-white focus:ring-3 focus:ring-blue-300"
+                <form method="POST" action="/signup/"
+                      class="max-w-sm mx-auto bg-white p-6 shadow-md rounded-lg border bg-white">
+                    {% csrf_token %}
+                    <div class="mb-5">
+                        <label for="name" class="block mb-2 text-sm font-medium text-gray-900">Username</label>
+                        <input type="text" name="name" id="name"
+                               class="shadow-sm bg-white border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
                                required/>
                     </div>
-                    <label for="terms" class="ms-2 text-sm font-medium text-gray-900">I agree with the <a href="#"
-                                                                                                          class="text-blue-600 hover:underline">terms
-                        and conditions</a></label>
-                </div>
-                <button type="submit" class="custom-button" style="background-color: #5521b5">Signup</button>
+                    <div class="mb-5">
+                        <label for="email" class="block mb-2 text-sm font-medium text-gray-900">Your email</label>
+                        <input type="email" name="email" id="email"
+                               class="shadow-sm bg-white border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
+                               required/>
+                    </div>
+                    <div class="mb-5">
+                        <label for="password" class="block mb-2 text-sm font-medium text-gray-900">Your password</label>
+                        <input type="password" name="password" id="password"
+                               class="shadow-sm bg-white border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
+                               required/>
+                    </div>
+                    <div class="mb-5">
+                        <label for="repeat-password" class="block mb-2 text-sm font-medium text-gray-900">Repeat
+                            password</label>
+                        <input type="password" id="repeat-password"
+                               class="shadow-sm bg-white border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
+                               required/>
+                    </div>
+                    <div class="flex items-start mb-5">
+                        <div class="flex items-center h-5">
+                            <input id="terms" type="checkbox" value=""
+                                   class="w-4 h-4 border border-gray-300 rounded-sm bg-white focus:ring-3 focus:ring-blue-300"
+                                   required/>
+                        </div>
+                        <label for="terms" class="ms-2 text-sm font-medium text-gray-900">I agree with the <a href="#"
+                                                                                                              class="text-blue-600 hover:underline">terms
+                            and conditions</a></label>
+                    </div>
+                    <button type="submit" class="custom-button" style="background-color: #5521b5">Signup</button>
 
 
-            </form>
+                </form>
 
 
-            <!-- Tailwind Modal -->
-            <div id="feedback-modal"
-                 class="fixed inset-0 flex items-center justify-center bg-black bg-opacity-50 z-50 hidden">
-                <div class="bg-white rounded-lg shadow-lg max-w-md w-full p-6">
-                    <h2 class="text-xl font-bold text-gray-800 mb-2">Message</h2>
-                    {% for message in messages %}
-                        <p class="{% if message.tags == 'success' %}text-green-600{% else %}text-red-600{% endif %} mb-4">{{ message }}</p>
-                    {% endfor %}
-                    <div class="flex justify-end">
-                        <button id="close-modal"
-                                class="bg-purple-600 hover:bg-purple-700 text-white px-4 py-2 rounded-lg">Close
-                        </button>
+                <!-- Tailwind Modal -->
+                <div id="feedback-modal"
+                     class="fixed inset-0 flex items-center justify-center bg-black bg-opacity-50 z-50 hidden">
+                    <div class="bg-white rounded-lg shadow-lg max-w-md w-full p-6">
+                        <h2 class="text-xl font-bold text-gray-800 mb-2">Message</h2>
+                        {% for message in messages %}
+                            <p class="{% if message.tags == 'success' %}text-green-600{% else %}text-red-600{% endif %} mb-4">{{ message }}</p>
+                        {% endfor %}
+                        <div class="flex justify-end">
+                            <button id="close-modal"
+                                    class="bg-purple-600 hover:bg-purple-700 text-white px-4 py-2 rounded-lg">Close
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
 
     <script>
         $(document).ready(function () {
