--- a/recommender/institutions/templates/institutions.html
+++ b/recommender/institutions/templates/institutions.html
@@ -13,7 +13,7 @@
 
 {% block content %}
 
-    <div class="bg-white pt-24">
+    <div class="bg-gradient-to-tr from-indigo-50 to-purple-100 pt-24">
 
         {# SEARCH FORM #}
         <form action="{% url "institutions:search_suggestions_institutions" %}" method="GET" class="max-w-md mx-auto"
