--- a/recommender/institutions/templates/courses.html
+++ b/recommender/institutions/templates/courses.html
@@ -12,7 +12,7 @@
 
 {% block content %}
 
-    <div class="bg-white pt-24">
+    <div class="bg-gradient-to-tr from-indigo-50 to-purple-100 pt-24">
 
         {# SEARCH FORM #}
         <form action="{% url 'institutions:search_suggestions_courses' %}" method="GET"
