--- a/recommender/users/templates/signin.html
+++ b/recommender/users/templates/signin.html
@@ -13,9 +13,8 @@
 
     <script src="https://accounts.google.com/gsi/client" async defer></script>
 
-    <div class="container mx-auto px-4 pt-10">
-        <div class="min-h-screen flex items-center justify-center w-full bg-white" id="auth"
-             style="background-color: white">
+    <div class="container mx-auto px-4 overflow-y-hidden bg-gradient-to-tr from-indigo-50 to-purple-100">
+        <div class="h-screen flex items-center justify-center w-full bg-gradient-to-tr from-indigo-50 to-purple-100" id="auth">
             <div class="bg-white p-8 rounded-lg shadow-md w-full max-w-sm">
 
                 <form method="POST" action="/signin/" class="max-w-sm mx-auto bg-white p-6 shadow-md rounded-lg border"
